--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,36 @@
-<router-outlet></router-outlet>
+<nz-layout class="app-layout">
+  <nz-layout>
+    <nz-content>
+      <div nz-row [style.min-height]="'570px'">
+        <div nz-col nzSpan="8" [style.min-height]="'100%'">
+          <ngx-codemirror
+            [style.min-height]="'100%'"
+            [(ngModel)]="storage.peg"
+            (ngModelChange)="parse()"
+            [options]="editorOptions"
+          ></ngx-codemirror>
+        </div>
+        <div nz-col nzSpan="8" [style.min-height]="'100%'">
+          <ngx-codemirror
+            [(ngModel)]="storage.file"
+            (ngModelChange)="parse()"
+            [options]="editor2Options"
+          ></ngx-codemirror>
+        </div>
+        <div nz-col nzSpan="8" [style.min-height]="'100%'" *ngIf="!error">
+          <ngx-codemirror
+            [(ngModel)]="output"
+            [options]="editor2Options"
+          ></ngx-codemirror>
+        </div>
+
+        <div nz-col nzSpan="8" [style.min-height]="'100%'" *ngIf="error">
+          <pre>{{ error | json }}</pre>
+        </div>
+      </div>
+      <div class="inner-content">
+        <router-outlet></router-outlet>
+      </div>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
